file(GLOB_RECURSE shell_QML *.qml *.js)
add_custom_target(qml SOURCES ${shell_QML})


#add_subdirectory(dashboard)
#add_subdirectory(desktop)
#add_subdirectory(images)
#add_subdirectory(launcher)
#add_subdirectory(lockscreen)
#add_subdirectory(panel)
#add_subdirectory(notifications)
#add_subdirectory(stages)






